<resources>
    <string name="app_name">课程管理</string>

        <string name="hint_login_username">请输入用户名</string>
        <string name="hint_login_password">输入密码</string>

    <string name="hint_login_c">请输入课程名</string>
    <string name="hint_login_c_info">输入课程信息</string>

    <string name="hint_again_password">确认密码</string>
        <string name="login">登录</string>
    <string name="reg">注册</string>
    <string name="add">添加新课程</string>
        <string name="login_forget_pwd">忘记密码</string>
        <string name="please_input_limit_pwd">请输入数字或字母</string>


</resources>
