<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <!--<ImageView-->
    <!--android:id="@+id/logo"-->
    <!--android:layout_width="100dp"-->
    <!--android:layout_height="100dp"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_gravity="center"-->
    <!--android:background="@null"-->
    <!--android:layout_marginTop="80dp"-->
    <!--android:scaleType="centerCrop"-->
    <!--android:src="@mipmap/skin_about_brand" />-->

    <ImageView
        android:id="@+id/h_back"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="请添加课程"
        android:textSize="20sp"
        android:layout_marginTop="80dp"
        android:textColor="@color/color_ffffff"
        />


    <!--<ScrollView-->
        <!--android:id="@+id/scrollView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_marginLeft="15dp"-->
        <!--android:layout_marginRight="15dp"-->
        <!--android:fillViewport="true"-->
        <!--android:scrollbarThumbVertical="@android:color/transparent"-->
        <!--android:scrollbars="vertical">-->

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="200dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="13dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:src="@mipmap/ic_mobile_flag" />

                <EditText
                    android:id="@+id/c_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/hint_login_c"
                    android:inputType="textVisiblePassword"
                    android:maxLength="11"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/color_999999"
                    android:textColorHint="@color/color_999999"
                    android:textSize="14dp" />

                <ImageView
                    android:id="@+id/iv_clean_phone"
                    android:layout_width="40dp"
                    android:layout_height="fill_parent"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_clear"
                    android:visibility="gone" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/color_eeeeee" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="13dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:src="@mipmap/ic_password_flag" />

                <EditText
                    android:id="@+id/c_info"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/hint_login_c_info"

                    android:maxLength="30"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/color_999999"
                    android:textColorHint="@color/color_999999"
                    android:textSize="14dp" />

                <ImageView
                    android:id="@+id/clean_password"
                    android:layout_width="40dp"
                    android:layout_height="fill_parent"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_clear"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/iv_show_pwd"
                    android:layout_width="40dp"
                    android:layout_height="fill_parent"
                    android:scaleType="centerInside"
                    android:src="@mipmap/pass_gone" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/color_eeeeee" />

            <Button
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="21dp"
                android:background="@drawable/bg_btn_login_selected"
                android:text="@string/add"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
                android:textColor="@color/color_ffffff"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                    android:text="返回"
                    android:textColor="@color/color_b0b8b2"
                    android:textSize="14dp" />

            </LinearLayout>

        </LinearLayout>

    <!--</ScrollView>-->

    <LinearLayout
        android:id="@+id/service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

    </LinearLayout>

</RelativeLayout>


    <!--<?xml version="1.0" encoding="utf-8"?>--><!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent">--><!--<LinearLayout--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:gravity="center_vertical|center_horizontal"--><!--android:orientation="vertical">--><!--<EditText--><!--android:id="@+id/username"--><!--android:layout_width="270dp"--><!--android:layout_height="wrap_content"--><!--android:ems="10"--><!--android:hint="请输入用户名"--><!--android:inputType="textPersonName" />--><!--<EditText--><!--android:id="@+id/email"--><!--android:layout_width="270dp"--><!--android:layout_height="wrap_content"--><!--android:ems="10"--><!--android:hint="请输入邮箱"--><!--android:inputType="textPersonName" />--><!--<EditText--><!--android:id="@+id/password"--><!--android:layout_width="270dp"--><!--android:layout_height="wrap_content"--><!--android:ems="10"--><!--android:hint="请输入密码"--><!--android:inputType="textPassword" />--><!--<EditText--><!--android:id="@+id/againpassword"--><!--android:layout_width="270dp"--><!--android:layout_height="wrap_content"--><!--android:ems="10"--><!--android:hint="请再次输入"--><!--android:inputType="textPassword" />--><!--<Button--><!--android:id="@+id/regButton"--><!--android:layout_width="270dp"--><!--android:layout_height="wrap_content"--><!--android:text="提交" />--><!--</LinearLayout>--><!--</LinearLayout>-->


    <!--<Button--><!--android:id="@+id/add"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_marginRight="68dp"--><!--android:text="添加课程"--><!--app:layout_constraintRight_toLeftOf="@+id/reg"--><!--tools:layout_constraintTop_creator="1"--><!--android:layout_marginEnd="68dp"--><!--android:layout_marginTop="26dp"--><!--app:layout_constraintTop_toBottomOf="@+id/c_info" />--><!--<Button--><!--android:visibility="invisible"--><!--android:id="@+id/reg"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"-->

    <!--tools:layout_constraintTop_creator="1"--><!--tools:layout_constraintRight_creator="1"--><!--android:layout_marginEnd="68dp"--><!--app:layout_constraintRight_toRightOf="parent"--><!--android:layout_marginTop="26dp"--><!--app:layout_constraintTop_toBottomOf="@+id/c_info"--><!--tools:ignore="RtlCompat" />--><!--<EditText--><!--android:id="@+id/c_name"--><!--android:layout_width="240dp"--><!--android:layout_height="45dp"--><!--android:layout_marginBottom="35dp"--><!--android:layout_marginEnd="68dp"--><!--android:layout_marginLeft="8dp"--><!--android:layout_marginRight="8dp"--><!--android:layout_marginStart="68dp"--><!--android:ems="10"--><!--android:hint="请输入课程名"--><!--android:inputType="textPersonName"--><!--app:layout_constraintBottom_toTopOf="@+id/c_info"--><!--app:layout_constraintHorizontal_bias="0.516"--><!--app:layout_constraintLeft_toLeftOf="@+id/c_info"--><!--app:layout_constraintRight_toRightOf="@+id/c_info"--><!--tools:layout_constraintLeft_creator="1"--><!--tools:layout_constraintRight_creator="1"--><!--tools:layout_editor_absoluteX="-15dp"--><!--tools:layout_editor_absoluteY="152dp" />--><!--<EditText--><!--android:id="@+id/c_info"--><!--android:layout_width="240dp"--><!--android:layout_height="45dp"--><!--android:layout_marginEnd="69dp"--><!--android:layout_marginLeft="0dp"--><!--android:layout_marginRight="0dp"--><!--android:layout_marginStart="69dp"--><!--android:ems="10"--><!--android:hint="请输入课程信息"--><!--android:inputType="textPassword"--><!--app:layout_constraintBottom_toBottomOf="parent"--><!--app:layout_constraintLeft_toLeftOf="@+id/add"--><!--app:layout_constraintRight_toRightOf="@+id/reg"--><!--app:layout_constraintTop_toTopOf="parent"--><!--tools:layout_constraintBottom_creator="1"--><!--tools:layout_constraintLeft_creator="1"--><!--tools:layout_constraintRight_creator="1"--><!--tools:layout_constraintTop_creator="1" />--><!--<TextView--><!--android:id="@+id/textView2"--><!--android:layout_width="250dp"--><!--android:layout_height="65dp"--><!--android:layout_marginBottom="50dp"--><!--android:layout_marginLeft="8dp"--><!--android:layout_marginRight="8dp"--><!--android:autoText="false"--><!--android:text="欢迎进入课程管理界面"--><!--android:textAlignment="center"--><!--android:textSize="20sp"--><!--android:textStyle="bold"--><!--app:layout_constraintBottom_toTopOf="@+id/c_name"--><!--app:layout_constraintHorizontal_bias="0.509"--><!--app:layout_constraintLeft_toLeftOf="@+id/c_name"--><!--app:layout_constraintRight_toRightOf="@+id/c_name" />--><!--</android.support.constraint.ConstraintLayout>-->